@startuml Biblioteca_POO

' Configuración visual
skinparam classAttributeIconSize 0
skinparam monochrome true
hide circle

package "unlar.edu.ar.model" {
    class Libro {
        - String isbn
        - String titulo
        - String autor
        - int anio
        - boolean disponible
        --
        + String getIsbn()
        + void setIsbn(String)
        + String getTitulo()
        + void setTitulo(String)
        + String getAutor()
        + void setAutor(String)
        + int getAnio()
        + void setAnio(int)
        + boolean isDisponible()
        + void setDisponible(boolean)
    }

    class Estudiante {
        - String legajo
        - String nombre
        - String carrera
        - String email
        --
        + String getLegajo()
        + void setLegajo(String)
        + String getNombre()
        + void setNombre(String)
        + String getCarrera()
        + void setCarrera(String)
        + String getEmail()
        + void setEmail(String)
    }

    class Prestamo {
        - Libro libro
        - Estudiante estudiante
        - LocalDate fechaPrestamo
        - LocalDate fechaDevolucion
        --
        + Libro getLibro()
        + void setLibro(Libro)
        + Estudiante getEstudiante()
        + void setEstudiante(Estudiante)
        + LocalDate getFechaPrestamo()
        + void setFechaPrestamo(LocalDate)
        + LocalDate getFechaDevolucion()
        + void setFechaDevolucion(LocalDate)
        + String toString()
    }
}

package "unlar.edu.ar.service" {
    class BibliotecaService {
        - List<Libro> catalogoLibros
        - Map<String, Estudiante> registroEstudiantes
        - Set<Prestamo> prestamosActivos
        --
        + void agregarLibro(Libro)
        + void registrarEstudiante(Estudiante)
        + void registrarPrestamo(String, String)
        + void registrarDevolucion(String, String, int)
        + double calcularMulta(int, double)
        + List<Libro> buscarLibrosPorTitulo(String)
    }
}

' Relaciones
Prestamo "1" --> "1" Libro : contiene
Prestamo "1" --> "1" Estudiante : pertenece a
BibliotecaService "1" o-- "*" Libro : gestiona
BibliotecaService "1" o-- "*" Estudiante : registra
BibliotecaService "1" o-- "*" Prestamo : controla

@enduml